feat: flat invocable contract, confidence fix, selection UI, hybrid binary support
- Rewrote Invocable.to_dict() to flat LLM-ready contract (name, kind, confidence,
  description, return_type, parameters[], execution); removed pipeline-internal
  wrappers: tool_id, ordinal, rva, confidence_factors, signature{}, documentation{},
  evidence{}, mcp{}, metadata{}
- Fixed confidence scoring: label derived after factors measured from real data;
  added 'guaranteed' level (full signature + params + return type)
- Fixed _get_execution_metadata(): duplicate 'method' keys on dotnet/com source
  types; cli source type falling through to method='unknown'
- Added src/ui/select_invocables.py: rich terminal selection UI with confidence-
  based defaults (guaranteed+high on, medium+low off), toggle/range/filter,
  --description hint highlighting, writes selected-invocables.json for Section 4
- Added hybrid binary detection: merges multiple *_mcp.json output sets, announces
  merge, strips _source_group before writing selected-invocables.json
- Updated section4_select_tools.py: removed schema_version validation, reads flat
  description field
- Rewrote docs/schemas/discovery-output.schema.json to match flat contract (was
  invalid JSON — old schema was appended after closing brace)
- Updated docs/architecture.md: removed v2.0 version ref, corrected factor count
- Updated docs/copilot-log/entries.md: sessions 1-4 entry
- Added docs/SECTIONS_2_3_GAP_ANALYSIS.md to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ __pycache__/
 validation_output/
 
 demo_output/
+
+# Working/scratch documents not for version control
+docs/SECTIONS_2_3_GAP_ANALYSIS.md
